--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@react-router/node": "^7.1.3",
     "@react-router/serve": "^7.1.3",
+    "html-react-parser": "^5.2.2",
     "isbot": "^5.1.17",
+    "marked": "^15.0.6",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.10",
     "react": "^19.0.0",
