--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@react-router/node": "^7.1.3",
     "@react-router/serve": "^7.1.3",
+    "@types/markdown-it": "^14.1.2",
+    "gray-matter": "^4.0.3",
     "html-react-parser": "^5.2.2",
     "isbot": "^5.1.17",
-    "marked": "^15.0.6",
+    "markdown-it": "^14.1.0",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.10",
     "react": "^19.0.0",
