--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gray-matter": "^4.0.3",
     "html-react-parser": "^5.2.2",
     "isbot": "^5.1.17",
+    "lucide-react": "^0.473.0",
     "markdown-it": "^14.1.0",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.10",
